--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
           readyTransition : true, // default
           responsiveTables: true  // default
       },
-      // themeColor: '#1a3d82',
       loadSidebar: true,
       subMaxLevel: 2,
       loadNavbar: true,
       coverpage: true,
       onlyCover: true,
-      name: 'iPad Backup Documentation',
+      name: 'iPad App Backup Documentation',
       repo: ''
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
 
 </body>
